[project]
name = "msal-bearer"
version = "1.4.4"
description = "Python package to get auth token for a msal client application using msal, msal-extensions and azure-identity."
authors = [{ name = "Åsmund Våge Fannemel", email = "asmf@equinor.com" }]
requires-python = ">=3.9.2,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "msal>=1.35.0,<2",
    "msal-extensions>=1.3.1,<2",
    "cryptography>=46.0.5",
    "azure-identity>=1.25.2,<2",
]

[project.urls]
Repository = "https://github.com/Equinor/msal-bearer"

[dependency-groups]
dev = ["black>=24.10.0,<26"]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
